# kde-set-desktop-names

./: .hgignore  LICENSE  README.md
set-kde-virtual-desktops-names/: CMakeLists.txt  set_names.cpp
